# phi-adapter-z2m

./: .gitignore  CMakeLists.txt  README.md  z2m-config.json
debian/: changelog  control  copyright  debhelper-build-stamp  files  phi-adapter-z2m.substvars  rules
debian/.debhelper/phi-adapter-z2m/: dbgsym-build-ids
debian/.debhelper/phi-adapter-z2m/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/phi-adapter-z2m/dbgsym-root/usr/share/doc/: phi-adapter-z2m-dbgsym
debian/phi-adapter-z2m/DEBIAN/: control  md5sums
debian/phi-adapter-z2m/usr/include/phi/adapter/api/: adapterconfig.h  adapterfactory.h  adapterinterface.h  channel.h  color.h  device.h  deviceupdate.h  discovery.h  discoveryquery.h  group.h  room.h  scene.h  types.h
debian/phi-adapter-z2m/usr/lib/cmake/phi-adapter-api/: phi-adapter-apiConfig.cmake  phi-adapter-apiTargets.cmake
src/: adapterconfig.h  adapterinterface.h  channel.h  color.h  device.h  group.h  main.cpp  room.h  scene.h  types.h  z2m_runtime_convert.cpp  z2m_runtime_convert.h  z2m_schema.cpp  z2m_schema.h  z2m_sidecar.cpp  z2m_sidecar.h  z2madapter.cpp  z2madapter.h  z2madapterfactory.cpp  z2madapterfactory.h
src/mqtt/: mqttclient.cpp  mqttclient.h
